# IC_Cal

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/IC_Cal_backend/: Cargo.toml  IC_Cal_backend.did
src/IC_Cal_backend/src/: lib.rs
src/IC_Cal_frontend/: index.html  package.json
src/IC_Cal_frontend/public/: styles.css
src/IC_Cal_frontend/src/: App.jsx  index.scss  vite.config.js
src/IC_Cal_frontend/src/components/Calculator/: Calculator.jsx  CalculatorButton.jsx  CalculatorInput.jsx  CalculatorResult.jsx
src/IC_Cal_frontend/src/hooks/: useCalculator.jsx
src/IC_Cal_frontend/src/lib/: actor.js  constants.js
