[package]
name = "IC_Cal_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
candid = "0.10.11"  # Match this version with the one used by `ic-cdk`
num-traits = "0.2.19"


